--- a/public/css/style.css
+++ b/public/css/style.css
@@ -66,6 +66,10 @@
    border-left: none;
 }
 
+#headerFicha tbody > tr > td {
+   border: 1px solid #999;
+}
+
 #descMaterial {
    text-align: center;
    font-style: italic;
