--- a/views/revisao/visualizationHaitian.ejs
+++ b/views/revisao/visualizationHaitian.ejs
@@ -37,7 +37,7 @@
             <input type="hidden" class="read-only" readonly style="width: 100%" id="maquina" name="maquina" value="<%= injetor.maq %>">
    
             <div class="table-ficha">
-               <table class="table-bordered table-responsive" style="width: 100%; margin-bottom: 40px;">
+               <table id="export_table_to_excel_1" class="table-bordered table-responsive" style="width: 100%; margin-bottom: 40px;">
                   <thead>
                      <tr>
                         <th>Número do Molde:</th>
@@ -90,7 +90,7 @@
             <div class="d-flex justify-content-between ficha-container">
                <!-- INJETORES -->
                <div class="d-flex flex-column table-responsive table-ficha justify-content-between container-injetores" style="width: 50vw; margin-right: 20px;">
-                  <table class="table-bordered" style="width: 100%;">
+                  <table id="export_table_to_excel_2" class="table-bordered" style="width: 100%;">
                      <thead>
                         <tr>
                            <% if (injetor.tolCilindro === 0.1) { %>
@@ -134,7 +134,7 @@
                      </tbody>
                   </table>
             
-                  <table class="table-bordered" style="width: 100%; margin-top: 40px;">
+                  <table id="export_table_to_excel_3" class="table-bordered" style="width: 100%; margin-top: 40px;">
                      <thead>
                         <tr>
                            <th colspan="6">INJEÇÃO</th>
@@ -227,7 +227,7 @@
                      </tfoot>
                   </table>
             
-                  <table class="table-bordered" style="width: 100%; margin-top: 40px;">
+                  <table id="export_table_to_excel_4" class="table-bordered" style="width: 100%; margin-top: 40px;">
                      <thead>
                         <tr>
                            <th colspan="6">RECALQUE</th>
@@ -302,7 +302,7 @@
                      </tbody>
                   </table>
             
-                  <table class="table-bordered" style="width: 100%; margin-top: 40px;">
+                  <table id="export_table_to_excel_5" class="table-bordered" style="width: 100%; margin-top: 40px;">
                      <thead>
                         <tr>
                            <th colspan="6">DOSAGEM</th>
@@ -403,7 +403,7 @@
                      </tfoot>
                   </table>
             
-                  <table class="table-bordered" style="width: 100%; margin-top: 40px;">
+                  <table id="export_table_to_excel_6" class="table-bordered" style="width: 100%; margin-top: 40px;">
                      <thead>
                         <tr>
                            <th colspan="6">DESCOMPRESSÃO</th>
@@ -455,7 +455,7 @@
                      </tbody>
                   </table>
             
-                  <table class="table-bordered" style="width: 100%; margin-top: 40px;">
+                  <table id="export_table_to_excel_7" class="table-bordered" style="width: 100%; margin-top: 40px;">
                      <thead>
                         <tr>
                            <th colspan="6">FECHAMENTO</th>
@@ -544,7 +544,7 @@
                      </tfoot>
                   </table>
             
-                  <table class="table-bordered" style="width: 100%; margin-top: 40px;">
+                  <table id="export_table_to_excel_8" class="table-bordered" style="width: 100%; margin-top: 40px;">
                      <thead>
                         <tr>
                            <th colspan="6">ABERTURA</th>
@@ -631,7 +631,7 @@
                      </tfoot>
                   </table>
             
-                  <table class="table-bordered" style="width: 100%; margin-top: 40px;">
+                  <table id="export_table_to_excel_9" class="table-bordered" style="width: 100%; margin-top: 40px;">
                      <thead>
                         <tr>
                            <th colspan="6">EXTRAÇÃO</th>
@@ -734,7 +734,7 @@
                      </tfoot>
                   </table>
             
-                  <table class="table-bordered" style="width: 100%; margin-top: 40px;">
+                  <table id="export_table_to_excel_10" class="table-bordered" style="width: 100%; margin-top: 40px;">
                      <thead>
                         <tr>
                            <th colspan="6">RADIAL HIDRÁULICO</th>
@@ -879,7 +879,7 @@
                
                <!-- PERIFÉRICOS -->
                <div class="table-responsive table-ficha d-flex flex-column justify-content-between container-perifericos" style="width: 50vw;">
-                  <table id="termoparTable" class="table-bordered" style="width: 100%">
+                  <table id="export_table_to_excel_11" id="termoparTable" class="table-bordered" style="width: 100%">
                      <tbody>
                         <tr>
                            <th colspan="1">TERMOPAR:</th>
@@ -893,7 +893,7 @@
                      </tbody>
                   </table>
    
-                  <table class="table-bordered" style="width: 100%; margin-top: 40px;">
+                  <table id="export_table_to_excel_12" class="table-bordered" style="width: 100%; margin-top: 40px;">
                      <thead>
                         <tr>
                            <th colspan="4">CÂMARA QUENTE</th>
@@ -1472,7 +1472,7 @@
                      </tbody>
                   </table>
                   
-                  <table class="table-bordered" style="width: 100%; margin-top: 40px;">
+                  <table id="export_table_to_excel_13" class="table-bordered" style="width: 100%; margin-top: 40px;">
                      <tbody>
                         <tr>               
                            <th colspan="1">VOLTAGEM:</th>
@@ -1486,7 +1486,7 @@
                      </tbody>
                   </table>
    
-                  <table class="table-bordered" style="width: 100%; margin-top: 40px">
+                  <table id="export_table_to_excel_14" class="table-bordered" style="width: 100%; margin-top: 40px">
                      <thead>
                         <tr>
                            <th colspan="5">VALVE GATES</th>
@@ -1889,7 +1889,7 @@
                      </tbody>
                   </table>
             
-                  <table class="table-bordered" style="margin-top: 40px;">
+                  <table id="export_table_to_excel_15" class="table-bordered" style="margin-top: 40px;">
                      <thead>
                         <tr>
                            <th colspan="5">REFRIGERAÇÃO DO MOLDE</th>
@@ -1996,7 +1996,7 @@
                      </tbody>
                   </table>
             
-                  <table class="table-bordered" style="margin-top: 40px;">
+                  <table id="export_table_to_excel_16" class="table-bordered" style="margin-top: 40px;">
                      <thead>
                         <tr>
                            <th>STEAM(VAPOR)</th>
@@ -2158,6 +2158,8 @@
          </div>
       </div>
    </div>
+
+   <a id="dlink" style="display:none;"></a>
    
    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
    <script src=/scripts/documentScripts.js></script>
